--- a/styles/c4_main.css
+++ b/styles/c4_main.css
@@ -1,3 +1,7 @@
+:root {
+	--global-color-1: #800000;
+}
+
 /* the styles for the elements */
 body {
 	font-family: Arial, Helvetica, sans-serif;
@@ -7,6 +11,18 @@ body {
 /* the styles for the header */
 header img {
 	float: left;
+}
+
+header h2 {
+	font-size: 170%;
+	color: #800000;
+	text-indent: 30px;
+}
+
+header h3 {
+	font-size: 130%;
+	font-style: italic;
+	text-indent: 30px;
 }
 
 /* the styles for the main content */
@@ -24,4 +40,16 @@ main h3 {
 	font-size: 105%;
 }
 
+a:hover, a:focus {
+	font-style: italic;
+}
+
 /* the styles for the footer */
+
+footer {
+	text-align: center;
+}
+
+.shadow {
+	text-shadow: 1px 1px #800000;
+}
