--- a/styles/c6_main.css
+++ b/styles/c6_main.css
@@ -9,10 +9,16 @@ html {
 body {
 	font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
-    width: 600px;
+    width: 800px;
     margin: 0 auto;
     border: 3px solid #931420;
     background-color: #fffded;
+}
+body main section {
+	width: 525px;
+	float: right;
+	padding-right: 20px;
+	padding-left: 20px;
 }
 a:focus, a:hover {
 	font-style: italic;
@@ -47,70 +53,91 @@ header img {
 }
 /* the styles for the main content */
 main {
-	clear: left;
+	/* Unused */
 }
-main {
-	padding: 0 30px;
-}
-main h1 {
+main section h1 {
 	font-size: 150%;
 	padding: .3em 0;
     border-top: 3px solid #931420;
     border-bottom: 3px solid #931420;
 }
-main h2 {
+main section h2 {
 	color: #800000;
 	font-size: 130%;
 	padding: .5em 0 .25em 0;
 }
-main h3 {
+main section h3 {
 	font-size: 105%;
 	padding-bottom: .25em;
 }
-main img {
+main section img {
 	padding-bottom: 1em;
 }
-main p {
+main section p {
 	padding-bottom: .5em;
 }
-main blockquote {
+main section blockquote {
 	padding: 0 2em;
 	font-style: italic;
 }
-main ul {
+main section ul {
 	padding: 0 0 .25em 1.25em;
 }
-main li {
+main section li {
 	padding-bottom: .35em;
 }
 
 /* the styles for the article */
-article {
+main article {
 	padding: .5em 0;
 	border-top: 2px solid #800000;
 	border-bottom: 2px solid #800000;
 }
-article h2 {
+main article h1 {
+	font-size: 150%;
+	padding-top: .5em;
+	padding-bottom: .25em;
+	margin: 0;
+}
+main article h2 {
 	padding-top: 0;
 }
-article h3 {
+main article h3 {
 	font-size: 105%;
 	padding-bottom: .25em;
+}
+main article img {
+	float: right;
+	border: 1px solid black;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	margin-left: 5px;
 }
 
 /* the styles for the aside */
-
-aside h3 {
+main aside {
+	width: 215px;
+	float: right;
+	padding-left: 20px;
+	padding-bottom: 20px;
+}
+main aside h2 {
+	color: #800000;
+	font-size: 130%;
+	padding: .5em 0 .25em 0;
+}
+main aside h3 {
 	font-size: 105%;
 	padding-bottom: .25em;
 }
-aside img {
+main aside img {
 	padding-bottom: 1em;
 }
 
 /* the styles for the footer */
 footer {
 	background-color: #931420;
+	clear: both;
 }
 footer p {
 	text-align: center;
